compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__mixed_positional_named_args.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Call {
                                    callee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 9,
                                                                end: 13,
                                                                start_line: 1,
                                                                start_col: 10,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 9,
                                                    end: 13,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 9,
                                            end: 13,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    args: [
                                        CallArg {
                                            name: None,
                                            value: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 14,
                                                                        end: 20,
                                                                        start_line: 1,
                                                                        start_col: 15,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 14,
                                                            end: 20,
                                                            start_line: 1,
                                                            start_col: 15,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 14,
                                                    end: 20,
                                                    start_line: 1,
                                                    start_col: 15,
                                                },
                                            },
                                            span: Span {
                                                start: 14,
                                                end: 20,
                                                start_line: 1,
                                                start_col: 15,
                                            },
                                        },
                                        CallArg {
                                            name: Some(
                                                Spanned {
                                                    node: SymbolU32 {
                                                        value: 4,
                                                    },
                                                    span: Span {
                                                        start: 22,
                                                        end: 23,
                                                        start_line: 1,
                                                        start_col: 23,
                                                    },
                                                },
                                            ),
                                            value: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 10,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 25,
                                                            end: 27,
                                                            start_line: 1,
                                                            start_col: 26,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 25,
                                                    end: 27,
                                                    start_line: 1,
                                                    start_col: 26,
                                                },
                                            },
                                            span: Span {
                                                start: 22,
                                                end: 27,
                                                start_line: 1,
                                                start_col: 23,
                                            },
                                        },
                                        CallArg {
                                            name: Some(
                                                Spanned {
                                                    node: SymbolU32 {
                                                        value: 5,
                                                    },
                                                    span: Span {
                                                        start: 29,
                                                        end: 30,
                                                        start_line: 1,
                                                        start_col: 30,
                                                    },
                                                },
                                            ),
                                            value: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 20,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 32,
                                                            end: 34,
                                                            start_line: 1,
                                                            start_col: 33,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 32,
                                                    end: 34,
                                                    start_line: 1,
                                                    start_col: 33,
                                                },
                                            },
                                            span: Span {
                                                start: 29,
                                                end: 34,
                                                start_line: 1,
                                                start_col: 30,
                                            },
                                        },
                                        CallArg {
                                            name: Some(
                                                Spanned {
                                                    node: SymbolU32 {
                                                        value: 6,
                                                    },
                                                    span: Span {
                                                        start: 36,
                                                        end: 41,
                                                        start_line: 1,
                                                        start_col: 37,
                                                    },
                                                },
                                            ),
                                            value: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 7,
                                                                    },
                                                                    span: Span {
                                                                        start: 43,
                                                                        end: 46,
                                                                        start_line: 1,
                                                                        start_col: 44,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 43,
                                                            end: 46,
                                                            start_line: 1,
                                                            start_col: 44,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 43,
                                                    end: 46,
                                                    start_line: 1,
                                                    start_col: 44,
                                                },
                                            },
                                            span: Span {
                                                start: 36,
                                                end: 46,
                                                start_line: 1,
                                                start_col: 37,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 47,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 49,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 49,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 49,
        start_line: 1,
        start_col: 1,
    },
}
